--- a/tl-rumble-bot/.env.example
+++ b/tl-rumble-bot/.env.example
@@ -26,9 +26,11 @@ SERVER_TIMEZONE=Europe/Paris
 # Base de données (optionnel)
 # DATABASE_PATH=./data/tl-rumble.sqlite
 
-# Canal où poster les créneaux wargame (embed + thread). Si vide, pas de message auto.
+# Canal où poster les créneaux wargame (embed + thread). Optionnel : sur le serveur principal,
+# tu peux utiliser /schedule-setup pour le définir depuis Discord (persisté en base, pas dans .env).
 # WARGAME_SCHEDULE_CHANNEL_ID=
 
-# Mode multi-guildes : ID du serveur principal TL Rumble. Si défini, /slot create et /signup
-# ne sont disponibles que sur ce serveur ; les autres peuvent utiliser /slot list et /tl-feed-setup.
+# Mode multi-guildes : ID du serveur principal TL Rumble. Si défini :
+# - /slot create et /signup ne sont disponibles que sur ce serveur.
+# - /listen-messages et /servers n'apparaissent que sur ce serveur (invisibles ailleurs).
 # MAIN_GUILD_ID=
