--- a/raid-helper-recap/.env.example
+++ b/raid-helper-recap/.env.example
@@ -8,7 +8,9 @@ RAID_HELPER_API_KEY=x1SKWWzKhD1R6rHOk944kRN0al30wkI2nZ9BLbX4
 RAID_HELPER_GUILD_ID=979650570849759282
 
 # Discord — Liste des membres avec le rôle (obligatoire : token bot + intent Guild Members)
+# CLIENT_ID = Application ID (Discord Developer Portal → ton application → General Information) — requis pour la commande /recap
 DISCORD_BOT_TOKEN=
+DISCORD_CLIENT_ID=
 DISCORD_GUILD_ID=979650570849759282
 DISCORD_ROLE_ID=
 
