--- a/raid-helper-recap/package.json
+++ b/raid-helper-recap/package.json
@@ -2,5 +2,13 @@
   "name": "raid-helper-recap",
   "version": "0.1.0",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "recap": "node run-recap.js",
+    "deploy-recap-command": "node scripts/deploy-recap-command.js"
+  },
+  "dependencies": {
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3"
+  }
 }
