--- a/raid-helper-recap/.env.example
+++ b/raid-helper-recap/.env.example
@@ -20,3 +20,14 @@ DISCORD_WEBHOOK_URL=
 
 # Fuseau horaire pour la "semaine" (ex. Europe/Paris)
 TIMEZONE=Europe/Paris
+
+# MP de relance — membres < 20 % réponse, uniquement à partir du mardi soir (23h)
+# Mettre à true pour activer les MPs
+RELANCE_MP_ENABLED=false
+# RELANCE_DAY_MIN=2
+# Message : {displayName} et {responsePercent} sont remplacés
+# RELANCE_MP_MESSAGE=Tu n'as répondu qu'à **{responsePercent} %** des raids Raid-Helper cette semaine. Pense à mettre à jour tes réponses !
+# Absents : IDs Discord séparés par des virgules — ils ne reçoivent pas de MP de relance
+# RELANCE_MP_ABSENT_IDS=123456789,987654321
+# Fichier où sont enregistrés les utilisateurs n'ayant pas pu recevoir le MP (MP désactivés)
+# RELANCE_MP_ERRORS_FILE=data/relance-mp-errors.json
