--- a/tl-rumble-bot/.env.example
+++ b/tl-rumble-bot/.env.example
@@ -32,5 +32,5 @@ SERVER_TIMEZONE=Europe/Paris
 
 # Mode multi-guildes : ID du serveur principal TL Rumble. Si défini :
 # - /slot create et /signup ne sont disponibles que sur ce serveur.
-# - /listen-messages et /servers n'apparaissent que sur ce serveur (invisibles ailleurs).
+# - /listen-inscriptions et /servers n'apparaissent que sur ce serveur (invisibles ailleurs).
 # MAIN_GUILD_ID=
