--- a/raid-helper-recap/.env.example
+++ b/raid-helper-recap/.env.example
@@ -31,3 +31,14 @@ RELANCE_MP_ENABLED=false
 # RELANCE_MP_ABSENT_IDS=123456789,987654321
 # Fichier où sont enregistrés les utilisateurs n'ayant pas pu recevoir le MP (MP désactivés)
 # RELANCE_MP_ERRORS_FILE=data/relance-mp-errors.json
+
+# Risque d'expulsion (/risque-expulsion) — critères : réponse < 20 % OU participations < 2 (sauf joueurs spécialisés)
+# Les absents déclarés (RELANCE_MP_ABSENT_IDS ci-dessus) sont exclus de la liste.
+# EXPULSION_RESPONSE_THRESHOLD=20
+# EXPULSION_MIN_PARTICIPATIONS=2
+# Rôle Discord dont les membres sont exemptés du critère "participations < 2" (joueurs spécialisés activité)
+# EXPULSION_EXCEPT_SPECIALIZED_ROLE_ID=
+
+# Éligibles récompense (/eligibles-recompense) — critères : réponse ≥ 50 % ET au moins 5 présences (événements Raid-Helper de la semaine)
+# REWARD_RESPONSE_THRESHOLD=50
+# REWARD_MIN_PARTICIPATIONS=5
